--- a/.github/workflows/generate_csv.yml
+++ b/.github/workflows/generate_csv.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install dependencies
+        run: |
+          pip install -r ./scripts/requirements.txt
+
       - name: Generate CSVs
         working-directory: ./scripts
         run: |
