--- a/.github/workflows/generate_artifacts.yml
+++ b/.github/workflows/generate_artifacts.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Update repository
         run: |
           git config --local user.name "GitHub Actions [Bot]"
-          git config --local user.email "noreply@github.com"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add yara
           git add csv
           git commit -m "Auto-generated detection artifacts"
